--- a/portfolioWebsite/build.gradle
+++ b/portfolioWebsite/build.gradle
@@ -15,51 +15,26 @@ java {
 
 repositories {
 	mavenCentral()
+	maven { url 'https://jitpack.io' }
 }
 
 dependencies {
 	dependencies {
-		// Spring Boot 웹 애플리케이션을 위한 스타터
 		implementation 'org.springframework.boot:spring-boot-starter-web'
-
-		// Spring Boot 테스트를 위한 스타터
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-		// 개발 전용 도구 (자동 재시작 등)
 		developmentOnly 'org.springframework.boot:spring-boot-devtools'
-
-		// JUnit 플랫폼 런처, 테스트 실행 시 필요
 		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-		// Lombok (컴파일 타임에만 필요)
 		compileOnly 'org.projectlombok:lombok'
-
-		// Lombok 어노테이션 처리기
 		annotationProcessor 'org.projectlombok:lombok'
-
-		// H2 데이터베이스 (런타임에만 필요)
-//		runtimeOnly 'com.h2database:h2'
-
-		// Spring Data JPA를 위한 스타터
-//		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-		// JUnit 5 (Jupiter) 테스트 프레임워크
+		runtimeOnly 'com.h2database:h2'
+		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 		testImplementation 'org.junit.jupiter:junit-jupiter'
-
-		// Spring Boot Thymeleaf 스타터
-		implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-
-		// Thymeleaf 레이아웃 다이얼렉트
+		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+		implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.5.4'
 		implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
-
-		// Spring Boot 유효성 검사를 위한 스타터
 		implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-		// Spring Security를 위한 스타터 (현재 주석 처리됨)
-		// implementation 'org.springframework.boot:spring-boot-starter-security'
-
-		// Thymeleaf와 Spring Security 통합 (현재 주석 처리됨)
-		// implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+//		implementation 'org.springframework.boot:spring-boot-starter-security'
+//		implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 	}
 
 }
