--- a/portfolioWebsite/src/main/resources/application.properties
+++ b/portfolioWebsite/src/main/resources/application.properties
@@ -1,20 +1,25 @@
 spring.application.name=portfolioWebsite
+server.port=8081
 
-# JPA Setting
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.generate-ddl=false
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+# DATABASE
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:~/local
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+file.add=file:src/main/resources/static/uploads/
+
+# JPA
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.id.new_generator_mappings=false
+spring.jpa.properties.hibernate.show_sql=true
 
-# Logging
-spring.output.ansi.enabled=always
-
-#Thymeleaf
-spring.thymeleaf.cache=false
-spring.thymeleaf.check-template-location=true
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-
+# 이미지 처리
 spring.mvc.static-path-pattern=/static/**
+
+# Page Reload
+spring.devtools.livereload.enabled = true
+spring.devtools.restart.enabled = true
+
