--- a/portfolioWebsite/build.gradle
+++ b/portfolioWebsite/build.gradle
@@ -30,11 +30,12 @@ dependencies {
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 		testImplementation 'org.junit.jupiter:junit-jupiter'
 		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-		implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.5.4'
+		implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 		implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 		implementation 'org.springframework.boot:spring-boot-starter-validation'
 //		implementation 'org.springframework.boot:spring-boot-starter-security'
 //		implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+		implementation 'org.postgresql:postgresql:42.2.20' // 버전은 필요에 따라 조정
 	}
 
 }
