--- a/portfolioWebsite/src/main/resources/application.properties
+++ b/portfolioWebsite/src/main/resources/application.properties
@@ -2,19 +2,23 @@ spring.application.name=portfolioWebsite
 server.port=8081
 
 # DATABASE
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:~/local
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-file.add=file:src/main/resources/static/uploads/
+# PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/portfolio
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=12345678
+
 
 # JPA
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+# PostgreSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
+
+
+# 이미지 업로드
+file.add=file:src/main/resources/static/uploads/
 
 # 이미지 처리
 spring.mvc.static-path-pattern=/static/**
