--- a/portfolioWebsite/src/main/resources/application.properties
+++ b/portfolioWebsite/src/main/resources/application.properties
@@ -18,10 +18,14 @@ spring.jpa.properties.hibernate.show_sql=true
 
 
 # 이미지 업로드
-file.add=file:src/main/resources/static/uploads/
+file.add=file:src/main/resources/static/bootstrap/assets/img/about/
 
 # 이미지 처리
 spring.mvc.static-path-pattern=/static/**
+
+# image size
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
 
 # Page Reload
 spring.devtools.livereload.enabled = true
