--- a/portfolioWebsite/src/main/resources/application.properties
+++ b/portfolioWebsite/src/main/resources/application.properties
@@ -18,7 +18,8 @@ spring.jpa.properties.hibernate.show_sql=true
 
 
 # 이미지 업로드
-file.add=file:src/main/resources/static/bootstrap/assets/img/about/
+file.add.about=file:src/main/resources/static/bootstrap/assets/img/about/
+file.add.portfolio=file:src/main/resources/static/bootstrap/assets/img/portfolio/
 
 # 이미지 처리
 spring.mvc.static-path-pattern=/static/**
