--- a/portfolioWebsite/build.gradle
+++ b/portfolioWebsite/build.gradle
@@ -19,25 +19,19 @@ repositories {
 }
 
 dependencies {
-	dependencies {
-		implementation 'org.springframework.boot:spring-boot-starter-web'
-		testImplementation 'org.springframework.boot:spring-boot-starter-test'
-		developmentOnly 'org.springframework.boot:spring-boot-devtools'
-		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-		compileOnly 'org.projectlombok:lombok'
-		annotationProcessor 'org.projectlombok:lombok'
-		runtimeOnly 'com.h2database:h2'
-		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-		testImplementation 'org.junit.jupiter:junit-jupiter'
-		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-		implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-		implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
-		implementation 'org.springframework.boot:spring-boot-starter-validation'
-//		implementation 'org.springframework.boot:spring-boot-starter-security'
-//		implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
-		implementation 'org.postgresql:postgresql:42.2.20' // 버전은 필요에 따라 조정
-	}
-
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+	implementation 'org.postgresql:postgresql:42.2.20'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.junit.jupiter:junit-jupiter'
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 }
 
 tasks.named('test') {
