--- a/portfolioWebsite/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/portfolioWebsite/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,15 @@
     "name": "file.add.portfolio",
     "type": "java.lang.String",
     "description": "A description for 'file.add.portfolio'"
+  },
+  {
+    "name": "spring.devtools.livereload.enabled",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.devtools.livereload.enabled'"
+  },
+  {
+    "name": "spring.devtools.restart.enabled",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.devtools.restart.enabled'"
   }
 ]}
